--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "rootDir": "./src",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "types": ["node", "electron"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
